src/objects/Progress_Note__c.object
<CustomObject>
    <description>NOTES Progress Notes are the notes taken for a Person Being Served on their progress towards meeting the goals on a Plan. Progress Notes are Master-detail to Plans.</description>
    <fields>
        <fullName>Abuse_Disclosure_Type__c</fullName>
        <label>Abuse Disclosure Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuse_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abuse Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan</label>
        <referenceTo>Action_Plan__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admission_State__c</fullName>
        <formula>TEXT( Admission__r.State__c )</formula>
        <label>Admission State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appearance__c</fullName>
        <label>Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>Well Groomed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casually Dressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disheveled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Comment__c</fullName>
        <description>Latest approval comment from the approval history.</description>
        <inlineHelpText>Latest approval comment from the approval history.</inlineHelpText>
        <label>Approval Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Date__c</fullName>
        <label>Approval Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bypass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Refinement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled by User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Family_Functioning__c</fullName>
        <label>Area Family Functioning</label>
        <picklist>
            <picklistValues>
                <fullName>Problem Solving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affective Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affective Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior Control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <inlineHelpText>We can provide guidance for how to use these fields in help text.</inlineHelpText>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auth_End_Date__c</fullName>
        <formula>Authorization__r.Payer_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auth_Episode_Number__c</fullName>
        <formula>Authorization__r.Avatar_Episode_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth Episode Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Service_Code__c</fullName>
        <formula>Service_Code__r.Service_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The authorized service which was utilized to deliver the service on which progress is being documented.</description>
        <label>Authorization</label>
        <referenceTo>Authorization__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Behavior_Anger_Mgt_Techniques__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavior &amp; Anger Mgt. Techniques</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Functioning__c</fullName>
        <label>Behavior/Functioning</label>
        <picklist>
            <picklistValues>
                <fullName>No Significant Changes Reported or Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Behavior__c</fullName>
        <label>Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Calm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidgety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agitated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncooperative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Behaviors_Exhibited__c</fullName>
        <description>This field is used by CA FSS</description>
        <label>Behaviors Exhibited</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billable_Category__c</fullName>
        <label>Billable Category</label>
        <picklist>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <formula>Person_Being_Served__r.Avatar_ID__c</formula>
        <label>Billing ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Report_Concatenation__c</fullName>
        <description>Concatenation of Service Location and Type of Contact</description>
        <formula>TEXT(Service_Location__c) + &quot; - &quot; +  TEXT(Type_of_Contact__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Concatenation of Service Location and Type of Contact</inlineHelpText>
        <label>Billing Report Concatenation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_System__c</fullName>
        <formula>TEXT(Person_Being_Served__r.Avatar_Source_System__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank10__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Diagnosis 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank11__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modifiers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank2__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Clients</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlankUnits__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units of Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blank_Cost__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Billable_Category__c</fullName>
        <label>Billable Category</label>
        <picklist>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Called_Client_Family_left_voice_message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called Client/Family, left voice message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Called_Client_Family_phone_disconnected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called Client/Family, phone disconnected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Called_collateral_left_voice_message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Called collateral, left voice message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_Coordination_Agency__c</fullName>
        <label>Care Coordination Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Coordination_Units__c</fullName>
        <label>Care Coordination Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Care_Coordination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care Coordination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Management_Note__c</fullName>
        <label>Case Management Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_in_Behavior_Functioning__c</fullName>
        <label>Change in Behavior/Functioning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_in_Medical_Condition__c</fullName>
        <label>Change in Medical Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_in_Substance_Abuse__c</fullName>
        <label>Change in Substance Abuse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_in_Thought_Process_Orientation__c</fullName>
        <label>Change in Thought Process/Orientation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Changes_in_Persons_Mood_Affect__c</fullName>
        <label>Changes in Person&apos;s Mood/Affect</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Child_Transported_Today__c</fullName>
        <label>Child Transported Today</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_and_Family_Team_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child and Family Team Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Family_home_but_refusing_service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client/Family home but refusing service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Family_not_home_left_note_on_door__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client/Family not home left note on door</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_placed_in_Substance_Abuse_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client placed in Substance Abuse program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_placed_in_detention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client placed in detention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_placed_in_group_home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client placed in group home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_placed_in_hospital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client placed in hospital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinician_Employee_ID__c</fullName>
        <description>Staff employee ID - from Clinician lookup - populated through trigger</description>
        <label>Practitioner ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinician__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Staff Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose a clinician from the list</errorMessage>
            <filterItems>
                <field>TMN_User__c.Operating_Group__c</field>
                <operation>equals</operation>
                <valueField>$User.Operating_Group__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Progress Notes</relationshipLabel>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Therapist_unable_to_bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Therapist (unable to bill)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <picklist>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collateral_Contact__c</fullName>
        <description>Selection for the Collateral Contact. If Other is selected, the &quot;Other Collateral Contact&quot; field must be populated.</description>
        <inlineHelpText>Selection for the Collateral Contact. If Other is selected, the &quot;Other Collateral Contact&quot; field must be populated.</inlineHelpText>
        <label>Collateral Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Biological Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case MGR.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client&apos;s School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juvenile Justice Case MGR.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collateral_Contacts_Units__c</fullName>
        <label>Collateral Contacts Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collateral_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collateral Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communication_Other__c</fullName>
        <label>Communication (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talkative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quiet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coord_support_for_Mentor_child__c</fullName>
        <inlineHelpText>What will the coordinator do to help support the Mentor and child?</inlineHelpText>
        <label>Coord. support for Mentor &amp; child?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coordinating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coordinating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practitioner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Employee_ID__c</fullName>
        <formula>CreatedBy.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Title__c</fullName>
        <formula>CreatedBy.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crisis_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crisis Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crisis_Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crisis Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Issues_Behaviors__c</fullName>
        <label>Current Issues/Behaviors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Curriculum_Planning_for_Upcoming_Session__c</fullName>
        <defaultValue>&quot;Curriculum used:&quot;  +  BR()  + &quot;Page#:&quot; +  BR()  + &quot;Lesson Name:&quot;</defaultValue>
        <label>Curriculum Planning for Upcoming Session</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Curriculum_Progress_Assessment__c</fullName>
        <defaultValue>&quot;Curriculum Used:&quot; +  BR() + &quot;Page#:&quot; +  BR()  + &quot;Lesson Name:&quot; +  BR() + &quot;Completed Y/N if No, type Reason:&quot; +  BR()  + &quot;LOM 1, 2, or 3:&quot;</defaultValue>
        <inlineHelpText>Curriculum Used, Page#, Lesson Name, Completed Y/N if No, type Reason, LOM 1,2,or3</inlineHelpText>
        <label>Curriculum Progress Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cutting_Bx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cutting Bx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DYFS_CM__c</fullName>
        <label>DYFS/CM:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DYFS_Contacted_Date__c</fullName>
        <label>DYFS Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DYFS_Contacted__c</fullName>
        <label>DYFS Contacted</label>
        <picklist>
            <picklistValues>
                <fullName>Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Danger_To_Self_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger To Self (Attempt)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_None__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Others_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Others (Attempt)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Others_Ideation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Others (Ideation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Others_Intent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Others (Intent)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Others_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Others (Plan)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Property_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Property (Attempt)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Property_Intent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Property (Intent)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Property_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Property (Plan)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Proprety_Ideation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Proprety (Ideation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Self_Ideation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Self (Ideation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Self_Intent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Self (Intent)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danger_to_Self_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Danger to Self (Plan)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Service_Started_on_Plan__c</fullName>
        <formula>Plan__r.Date_Service_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Service Started on Plan</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Service_String__c</fullName>
        <description>date of service in MMDDYYYY format</description>
        <label>Date of Service</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>The date the clinician administered the service.</description>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Created_past_DOS__c</fullName>
        <description># of days after service that the note was created</description>
        <formula>datevalue(CreatedDate) - Date_of_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Modification__c</fullName>
        <formula>TODAY() - datevalue( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Modification</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Impl_Home_Based_Support_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dev. &amp; Impl. Home Based Support Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Code__c</fullName>
        <label>Diagnostic Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Contact__c</fullName>
        <formula>IF(ISPICKVAL( Type_of_Contact__c, &apos;Face-To-Face&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Contact?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_vs_Indirect__c</fullName>
        <formula>IF( ISPICKVAL(Type_of_Contact__c, &apos;Face-To-Face&apos;) , &apos;Direct&apos;, &apos;Indirect&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct vs Indirect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_planning_barriers_to_discharge__c</fullName>
        <label>Discharge planning/barriers to discharge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disregard_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates note was marked to be diregarded</description>
        <label>Disregard Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_prep_time__c</fullName>
        <description>Document prep time in minutes.</description>
        <label>Document prep time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empowerment_Skills_Building__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Empowerment/Skills Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time_Only__c</fullName>
        <description>for avatar billing report.</description>
        <label>Service End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Enter the date and time service ended</description>
        <inlineHelpText>Enter the date and time service ended</inlineHelpText>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Esigned_At__c</fullName>
        <label>Esigned At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Esigned_By__c</fullName>
        <label>Esigned By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eye_Contact__c</fullName>
        <label>Eye Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCT_Check_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCT Check Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCT_Fidelity_Measure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCT Fidelity Measure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCT_Phase_String_At_Note_Creation__c</fullName>
        <description>This field &quot;translates&quot; the numeric value in field &quot;FCT_Phase_at_Note_Creation__c on the Progress_Note-_c object into a string representing an IFCS / FCT phase.  In theory, the value in &quot;FCT_Phase_at_Note_Creation__c&quot; COULD be a phase of ANY treatment model.  This field, though, converts numeric values 1 - 4 to their related FCT phase, and leaves a blank for all other values.</description>
        <formula>IF(  FCT_Phase_at_Note_Creation__c  = 1, &apos;1 - Joining and Assessing&apos;, IF( FCT_Phase_at_Note_Creation__c  = 2, &apos;2 - Restructuring&apos;, IF(FCT_Phase_at_Note_Creation__c  = 3, &apos;3 - Value Change&apos;, IF( FCT_Phase_at_Note_Creation__c  = 4, &apos;4 - Generalization&apos;,&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCT Phase at Note Creation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCT_Phase_at_Note_Creation__c</fullName>
        <label>FCT Phase at Note Creation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Face_to_Face_Time__c</fullName>
        <label>Face-to-Face Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fam_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fam. Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Assessment_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Assessment Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Life_Cycle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Life Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>CreatedBy.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foster_Parents__c</fullName>
        <label>Foster Parents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Source2__c</fullName>
        <formula>Person_Being_Served__r.Other_ID_Description__c</formula>
        <label>Funding Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source_Number__c</fullName>
        <formula>Person_Being_Served__r.Other_ID__c</formula>
        <label>Funding Source Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <description>Please indicate the funding source.</description>
        <inlineHelpText>Please indicate the funding source.</inlineHelpText>
        <label>Funding Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generalization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generalization</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>